fixed california not showing results

--- a/resources/styles/pages/businesses.css
+++ b/resources/styles/pages/businesses.css
@@ -18,6 +18,12 @@
     background-size: 20px 20px;
 }
 
+
+footer {
+
+    display: none !important;
+}
+
 @media only screen and (max-width:766px) {
     footer {
         position: absolute;
